Sucess authentication adn authorization for patient

--- a/Spring_Server/TODO
+++ b/Spring_Server/TODO
@@ -1,3 +1,4 @@
- - handle login of patient
+ DONE - handle login of patient
  - handle multiple webrtc clients
  - record mapstruct learn
+ - handle patient authentication and authorization'
