--- a/Spring_Server/TODO
+++ b/Spring_Server/TODO
@@ -1,4 +1,4 @@
  DONE - handle login of patient
  - handle multiple webrtc clients
  - record mapstruct learn
- - handle patient authentication and authorization'
+ DONE - handle patient authentication and authorization'
