some updates on the connecting and setting state

--- a/Spring_Server/TODO
+++ b/Spring_Server/TODO
@@ -2,3 +2,4 @@
  - handle multiple webrtc clients
  - record mapstruct learn
  DONE - handle patient authentication and authorization'
+  - handleConnectForCounsellor here the cousellor token set is created new instead of checking if already exiasts or not that have to be cheked and then the token set needs to be updatded
